--- a/apps/templates/index.html
+++ b/apps/templates/index.html
@@ -63,10 +63,43 @@
             </div>
             <div class="row" id="mars-hemisphere-images">
                 <div class="col-md-8">
-                    <h2>{{mars.hemisphere_image_title}}</h2>
+                    <h2>{{mars.Img_title0}}</h2>
                     <!-- if images is False/None/non-existent, then default to error message -->
                     <img
-                        src="{{mars.hemisphere_img_link}}"
+                        src="{{mars.Img_url0}}"
+                        class="img-responsive"
+                        alt="Hemisphere image"
+                    />
+                </div>
+            </div>
+            <div class="row" id="mars-hemisphere-images">
+                <div class="col-md-8">
+                    <h2>{{mars.Img_title1}}</h2>
+                    <!-- if images is False/None/non-existent, then default to error message -->
+                    <img
+                        src="{{mars.Img_url1}}"
+                        class="img-responsive"
+                        alt="Hemisphere image"
+                    />
+                </div>
+            </div>
+            <div class="row" id="mars-hemisphere-images">
+                <div class="col-md-8">
+                    <h2>{{mars.Img_title2}}</h2>
+                    <!-- if images is False/None/non-existent, then default to error message -->
+                    <img
+                        src="{{mars.Img_url2}}"
+                        class="img-responsive"
+                        alt="Hemisphere image"
+                    />
+                </div>
+            </div>
+            <div class="row" id="mars-hemisphere-images">
+                <div class="col-md-8">
+                    <h2>{{mars.Img_title3}}</h2>
+                    <!-- if images is False/None/non-existent, then default to error message -->
+                    <img
+                        src="{{mars.Img_url3}}"
                         class="img-responsive"
                         alt="Hemisphere image"
                     />
